# rust-term-chat

./: CLAUDE.md  Cargo.toml  deny.toml  justfile
.claude/: settings.json
.claude/agents/: implementation-team.md  requirements-team.md
.claude/commands/: agent-team-plan.md  code-quality.md  grade-work.md  parallel-sprint.md  prd-from-usecases.md  retrospective.md  session-handoff.md  task-decompose.md  uc-create.md  uc-review.md  verify-uc.md
.claude/skills/: cockburn-template.md  grading-rubric.md  pre-implementation-checklist.md
.github/workflows/: ci.yml
docs/: backlog.md  presentation-forge-spec-driven-dev.md  termchat-blueprint.md  workplace-post-spec-driven-dev.md
docs/research/: multi-agent-coordination.md
docs/retrospectives/: phase0-uc001-uc005.md  sprint11-uc017.md  sprint4-uc004.md  sprint5-uc006.md  sprint6-uc007.md  sprint7-uc008.md  sprint7-uc009.md  sprint8-uc010-uc011.md  sprint9-uc013.md  uc-011-auto-reconnect.md
docs/sprints/: current.md
docs/tasks/: uc-001-tasks.md  uc-003-tasks.md  uc-004-tasks.md  uc-006-tasks.md  uc-007-tasks.md  uc-008-tasks.md  uc-013-tasks.md  uc-017-tasks.md
docs/teams/: uc-001-team.md  uc-003-team.md  uc-004-team.md  uc-006-team.md  uc-007-team.md  uc-008-team.md  uc-017-team.md
docs/use-cases/: README.md  uc-001-send-direct-message.md  uc-002-receive-direct-message.md  uc-003-establish-p2p-connection.md  uc-004-relay-messages-via-server.md  uc-005-establish-e2e-handshake.md  uc-006-create-room.md  uc-007-join-room-as-agent-participant.md  uc-008-share-task-list.md  uc-009-typing-presence.md  uc-010-connect-relay-exchange-messages.md  uc-011-auto-reconnect-relay.md  uc-011-configure-client-relay.md  uc-013-harden-dependency-hygiene.md  uc-014-chatmanager-refactor.md  uc-015-agent-crypto-fanout.md  uc-016-join-relay-routing.md  uc-017-connect-tui-to-live-backend.md
reports/: quality-2026-02-07.md
termchat/: Cargo.toml  deny.toml
termchat-proto/: Cargo.toml
termchat-proto/src/: agent.rs  codec.rs  lib.rs  message.rs  presence.rs  relay.rs  room.rs  task.rs  typing.rs
termchat-relay/: Cargo.toml
termchat-relay/src/: config.rs  lib.rs  main.rs  relay.rs  rooms.rs  store.rs
termchat/src/: app.rs  lib.rs  main.rs  net.rs
termchat/src/agent/: bridge.rs  mod.rs  participant.rs  protocol.rs
termchat/src/chat/: ack.rs  history.rs  mod.rs  receive.rs  room.rs  send.rs
termchat/src/config/: mod.rs
termchat/src/crypto/: keys.rs  mod.rs  noise.rs
termchat/src/tasks/: manager.rs  merge.rs  mod.rs
termchat/src/transport/: hybrid.rs  loopback.rs  mod.rs  quic.rs  relay.rs
termchat/src/ui/: chat_panel.rs  mod.rs  sidebar.rs  status_bar.rs  task_panel.rs  theme.rs
tests/integration/: agent_bridge.rs  e2e_encryption.rs  p2p_connection.rs  presence_typing.rs  relay_fallback.rs  relay_reconnect.rs  room_management.rs  send_receive.rs  task_sync.rs  tui_live_backend.rs  tui_net_wiring.rs
tests/property/: serialization.rs
