[workspace]
members = ["termchat", "termchat-relay", "termchat-proto"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
bincode = { version = "2", features = ["serde"] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
tracing = "0.1"
uuid = { version = "1", features = ["v7", "serde"] }
proptest = "1"
futures-util = "0.3"
tokio-tungstenite = "0.28"
url = "2"
axum = "0.8"
tracing-subscriber = "0.3"
[lints.clippy]
pedantic = "warn"
nursery = "warn"
unwrap_used = "deny"
expect_used = "deny"
