[workspace]
members = ["termchat", "termchat-relay", "termchat-proto"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "Apache-2.0"
description = "Terminal-native encrypted messenger"
authors = ["TermChat Contributors"]
repository = "https://github.com/termchat/termchat"
homepage = "https://github.com/termchat/termchat"
keywords = ["chat", "terminal", "tui", "encrypted", "p2p"]
categories = ["command-line-utilities", "network-programming"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
parking_lot = "0.12"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
tracing = "0.1"
uuid = { version = "1", features = ["v7", "serde"] }
proptest = "1"
futures-util = "0.3"
tokio-tungstenite = "0.28"
url = "2"
axum = "0.8"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
clap = { version = "4", features = ["derive", "env"] }
toml = "0.8"
dirs = "6"
[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
