[package]
name = "termchat-proto"
description = "Wire protocol library for TermChat"
edition.workspace = true
version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
postcard = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[[test]]
name = "serialization"
path = "../tests/property/serialization.rs"
