[package]
name = "termchat-relay"
description = "Lightweight relay server for TermChat"
edition.workspace = true
version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
termchat-proto = { path = "../termchat-proto" }
serde = { workspace = true }
postcard = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
axum = { workspace = true, features = ["ws"] }
futures-util = { workspace = true }
tokio-tungstenite = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
