[package]
name = "termchat"
edition.workspace = true
version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
termchat-proto = { path = "../termchat-proto" }
serde = { workspace = true }
postcard = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
ratatui = "0.29"
crossterm = "0.28"
chrono = "0.4"
snow = "0.9"
x25519-dalek = { version = "2", features = ["static_secrets"] }
zeroize = "1"
rand = "0.8"
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = "0.13"
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
url = { workspace = true }
serde_json = "1"

[dev-dependencies]
tokio = { workspace = true }
termchat-relay = { path = "../termchat-relay" }

[[test]]
name = "send_receive"
path = "../tests/integration/send_receive.rs"

[[test]]
name = "e2e_encryption"
path = "../tests/integration/e2e_encryption.rs"

[[test]]
name = "p2p_connection"
path = "../tests/integration/p2p_connection.rs"

[[test]]
name = "relay_fallback"
path = "../tests/integration/relay_fallback.rs"

[[test]]
name = "room_management"
path = "../tests/integration/room_management.rs"

[[test]]
name = "agent_bridge"
path = "../tests/integration/agent_bridge.rs"

[[test]]
name = "presence_typing"
path = "../tests/integration/presence_typing.rs"
